refer a friend initial commit; 200 community points earned for every 5 invites sent out

--- a/app/views/application_mailer/rejection_email.html.erb
+++ b/app/views/application_mailer/rejection_email.html.erb
@@ -10,7 +10,7 @@
   <body>
     <p>Hi <%= @user.first_name %>,</p>
     <p>
-      Thank you for applying to The Teen Magazine's writer team. We reviewed your application and regret to inform you that we will not be accepting your application at this time.
+      Thank you for applying to The Teen Magazine's writer team. We reviewed your application and have decided we will not be accepting your application at this time.
       We recieve many applications every month and are unable to accept them all. We wish you the best in your writing journey and encourage you to apply again in the future.
     </p>
     <p>
