--- a/app/views/application_mailer/welcome_email.html.erb
+++ b/app/views/application_mailer/welcome_email.html.erb
@@ -9,7 +9,7 @@
 
   <body>
     <p>Hi <%= @user.first_name %>,</p>
-    <p><b>Congratulations!</b> We really connected with your cover letter and think you are a great fit for our team of writers.</p>
+    <p><b>Congratulations!</b> We really connected with your application and think you are a great fit for our team of writers.</p>
     <p>As a writer for The Teen Magazine, you will receive feedback on submitted articles, build your journalism resume, and network with our amazing community
       of journalists. We are so excited to welcome you to our talented team of writers, and we can't wait
       to work with you to create your first article!</p>
