--- a/app/views/invitations/apply_through_invitation.html.erb
+++ b/app/views/invitations/apply_through_invitation.html.erb
@@ -4,7 +4,7 @@
     <img style="display: block; width: 600px; max-width: 100%; margin: 0 auto;" src="https://media1.tenor.com/images/1f84b096cbe1cc9f3763c803bb17e10e/tenor.gif?itemid=5878976" />
     <p>We're so excited you want to join The Teen Magazine writer team!</p>
     <p>A confirmation email was sent to <%= @application.email %> with a copy of your application.
-      You will be notified within three business days if your application is accepted.</p>
+      You will be notified within 24 hours if your application is accepted.</p>
     <p>Go back to <a class="link_grn" href="/">The Teen Magazine</a>.</p>
     <br>
   </div>
