--- a/app/views/users/onboarding/_your_profile.html.erb
+++ b/app/views/users/onboarding/_your_profile.html.erb
@@ -15,7 +15,7 @@
 <div class="onboarding_page_container">
   <%= form_for(@user, url: user_path(@user, redirect: "profile_preview")) do |f| %>
   <div id="onboarding_page">
-    <h5>Submit Your Profile for Approval</h5>
+    <h5>Submit Your Profile for Review</h5>
     <p style="margin-bottom: 0px;">Your first step as a new writer for The Teen Magazine is to create your profile!</p>
     <%= image_tag "profile_example.png", :class => "img_profile_example" %>
     <p>
