--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -265,6 +265,12 @@ body {
   background-color: #085F63;
 }
 
+.invite {
+  height: 200px;
+  width: 100%;
+  background-color: #49BEB7;
+}
+
 #banner_writing {
   width: 100%;
   max-height: 200px;
@@ -440,7 +446,7 @@ html, body {
   border-radius: 50%;
 }
 
-.whats-new, .comments {
+.whats-new, .comments, .activity_wrapper {
   a {
     display: inline !important;
   }
