--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,7 +38,7 @@
     <%= f.check_box :bi_monthly_assignment %>
     <%= f.label "receive occasional article assignments" %><br>
 
-    <h5>Links (Optional)</h5>
+    <h5>Social Media (Optional)</h5>
 
     <div id="edit--profile">
       <%= f.label "Website" %>
