--- a/app/views/application_mailer/invitation_to_apply.html.erb
+++ b/app/views/application_mailer/invitation_to_apply.html.erb
@@ -494,7 +494,7 @@
                         <tbody>
                             <tr>
                                 <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Helvetica;font-size: 18px;padding: 18px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                                    <a class="mcnButton " title="Be taken to your application link" href="http://localhost:3000/writers/<%= @user.slug %>/invitations/<%= @invitation.token %>" target="_blank" style="font-weight: bold;letter-spacing: -0.5px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">Be taken to your application link</a>
+                                    <a class="mcnButton " title="Be taken to your application link" href="https://www.theteenmagazine.com/writers/<%= @user.slug %>/invitations/<%= @invitation.token %>" target="_blank" style="font-weight: bold;letter-spacing: -0.5px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">Be taken to your application link</a>
                                 </td>
                             </tr>
                         </tbody>
