--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -77,10 +77,10 @@
       </p>
       <div class="links mb-4"
         <% if @show_onboarding %>
-          data-step data-index="5" data-onboarding-content="Invite a friend to The Teen Magazine here."
+          data-step data-index="5" data-onboarding-content="Recommend a friend to The Teen Magazine here."
         <% end %>
       >
-        <%= link_to("Invite a friend", "/writers/#{@user.slug}/invitations", class: "link_grn pl-3 pr-3 mt-2") %>
+        <%= link_to("Recommend a friend", "/writers/#{@user.slug}/invitations", class: "link_grn pl-3 pr-3 mt-2") %>
       </div>
     </div>
   </div>
