--- a/app/views/invitations/create.js.erb
+++ b/app/views/invitations/create.js.erb
@@ -15,6 +15,6 @@
   $('.spinner-button').addClass('hide');
   $('#invitation_email').val("");
 <% else %>
-  $('#form-invite').html("<%= j(render partial: 'invitations/partials/home/confirmation_invite_sent', locals: {invites_left_to_earn_points: @invites_left_to_earn_points}) %>");
+  $('#form-invite').html("<%= j(render partial: 'invitations/partials/home/confirmation_invite_sent', locals: {invitation: @invitation}) %>");
   $('#invite-count').html("<b><%= current_user.invitations.count %></b> friend<% if !(current_user.invitations.count.eql? 1) %>s<% end %>");
 <% end %>
