--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -4,7 +4,7 @@
       <div class="dashboard--writer--flex--main pr-3">
         <!-- Classic tabs -->
         <div class="classic-tabs">
-          <ul class="nav" id="myClassicTab" role="tablist">
+          <ul class="nav mt-0" id="myClassicTab" role="tablist" style="padding-top: 15px;">
             <li class="nav-item tab-custom">
               <a class="tab-custom active show" id="home-tab-classic" data-toggle="tab" href="#profile-classic"
                 role="tab" aria-controls="profile-classic" aria-selected="true">Home</a>
