--- a/app/views/reviews/get_editor_activity.js.erb
+++ b/app/views/reviews/get_editor_activity.js.erb
@@ -1,5 +1,5 @@
 $('#list-group-comments').append("<%= j(render 'reviews/editor_activity/editor_activity_page')%>");
-<% if @page.eql? @last_page %>
+<% if @is_last_page %>
   $('#div_next_link').html("");
 <% else %>
   $('#div_next_link').html("<%= j(render 'reviews/editor_activity/next_link') %>");
