--- a/app/views/newsletters/_form.html.erb
+++ b/app/views/newsletters/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @newsletter do |f| %>
-  <% @hero_image_src = @newsletter.hero_image.present? ? @newsletter.hero_image.url(:card) : Newsletter.not_nil.last.hero_image.url(:card) %>
-  <img style="width: 100%;" src="<%= @hero_image_src %>"/>
+  <% @hero_image_src = @newsletter.hero_image.present? ? @newsletter.hero_image.url(:card) : Newsletter.not_nil.last.try(:hero_image)&.url(:card) %>
+  <% if @hero_image_src.present? %><img style="width: 100%;" src="<%= @hero_image_src %>"/><% end %>
   <p class="mb-4 mt-3">Upload New Image (800x335) <%= f.file_field :hero_image %></p>
   <p class="mb-0 mt-0">Message (80 - 150 words)</p>
   <%= f.text_area :message, value: (@newsletter.message || Newsletter.not_nil.last.try(:message)) %>
