--- a/app/views/reviews/_all_editor_activity.html.erb
+++ b/app/views/reviews/_all_editor_activity.html.erb
@@ -1,6 +1,8 @@
 <ul class="feed_wrapper mb-4 list-group list-group-flush mb-3" id="list-group-comments">
   <%= render partial: 'reviews/editor_activity/editor_activity_page' %>
 </ul>
-<div id="div_next_link">
-  <%= render partial: 'reviews/editor_activity/next_link' %>
-</div>
+<% if Activity.all.count > @per_page  %>
+  <div id="div_next_link">
+    <%= render partial: 'reviews/editor_activity/next_link' %>
+  </div>
+<% end %>
