--- a/app/views/users/extensions.html.erb
+++ b/app/views/users/extensions.html.erb
@@ -36,7 +36,7 @@
                       <% end %>
                       <div class="btn_cntnr mb-0 pb-0">
                         <span data-toggle="tooltip" title="<% if @class.eql? "disabled" %>You don't have any more credits<% end %>" style="float: right;">
-                           <%= f.submit 'Use Extension',
+                           <%= f.submit 'Use Promotion',
                             data: {confirm: "You are using 1 credit to extend #{draft.title}'s deadline by 14 days. Do you want to continue?"},
                             class: "mt-0 btn btn-primary #{@class}", id: "btn_dark" %>
                         </span>
