updated privacy policy

--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -7,8 +7,10 @@
 
 <p><strong>What personal information do we collect from the people that visit our blog, website or app?</strong></p>
 
-<p>When ordering or registering on our site, as appropriate, you may be asked to enter your name, email address or other details to help you with your experience.</p>
+<p>When applying on our site, as appropriate, you may be asked to enter your name, email address or other details to help you with your experience.</p>
 
+<p><strong>Mediavine Programmatic Advertising</strong></p>
+<p>For information regarding data collection by Mediavine ad partners including how to opt out of data collection, please click <a href="https://www.mediavine.com/ad-partners/" rel="nofollow" class="link_grn">here</a>.</p>
 
 <p><strong>When do we collect information?</strong></p>
 
