removed ezoic div ids

--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -86,7 +86,7 @@ blockquote {
     <div class="articles">
       <div class="flex_other_articles">
         <div class="ads_wrapper" style="min-height: 250px;">
-          <div id="ezoic-pub-ad-placeholder-119">
+          <div>
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- Post right column -->
             <ins class="adsbygoogle"
@@ -103,7 +103,7 @@ blockquote {
       </div>
     </div>
     <div class="fixed_ads ads_wrapper">
-      <div id="ezoic-pub-ad-placeholder-120">
+      <div>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <!-- Square column right -->
         <ins class="adsbygoogle"
@@ -115,7 +115,7 @@ blockquote {
         </script>
       </div>
       <br>
-      <div id="ezoic-pub-ad-placeholder-121">
+      <div>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <!-- Post column right -->
         <ins class="adsbygoogle"
