--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,7 @@
     </div>
     <div class="most_read contain_articles">
       <div class="ads_wrapper">
-        <div id="ezoic-pub-ad-placeholder-117">
+        <div>
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           <!-- homepage-0 -->
           <ins class="adsbygoogle"
@@ -47,7 +47,7 @@
     </div>
     <div class="most_read contain_articles">
       <div class="ads_wrapper">
-        <div id="ezoic-pub-ad-placeholder-118">
+        <div>
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           <!-- Homepage 1 -->
           <ins class="adsbygoogle"
