--- a/app/views/welcome/partials/_hero.html.erb
+++ b/app/views/welcome/partials/_hero.html.erb
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="ads_wrapper ads_responsive">
-    <div id="ezoic-pub-ad-placeholder-116">
+    <div>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Homepage 1 -->
       <ins class="adsbygoogle"
