removed adsense ads

--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -87,15 +87,15 @@ blockquote {
       <div class="flex_other_articles">
         <div class="ads_wrapper" style="min-height: 250px;">
           <div>
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
             <!-- Post right column -->
-            <ins class="adsbygoogle"
+            <!-- <ins class="adsbygoogle"
                  style="display:inline-block;width:300px;height:250px"
                  data-ad-client="ca-pub-4566416931763342"
                  data-ad-slot="2500875060"></ins>
             <script>
                  (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            </script> -->
           </div>
         </div>
         <h3>Trending in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
@@ -104,29 +104,29 @@ blockquote {
     </div>
     <div class="fixed_ads ads_wrapper">
       <div>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <!-- Square column right -->
-        <ins class="adsbygoogle"
+        <!-- <ins class="adsbygoogle"
         style="display:inline-block;width:300px;height:250px"
         data-ad-client="ca-pub-4566416931763342"
-        data-ad-slot="6106391233"></ins>
-        <script>
+        data-ad-slot="6106391233"></ins> -->
+        <!-- <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        </script> -->
       </div>
       <br>
       <div>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
         <!-- Post column right -->
-        <ins class="adsbygoogle"
+        <!-- <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-4566416931763342"
              data-ad-slot="1161186312"
              data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
+             data-full-width-responsive="true"></ins> -->
+        <!-- <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        </script> -->
       </div>
     </div>
   </div>
