--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,9 +23,9 @@
     <div class="most_read contain_articles">
       <div class="ads_wrapper">
         <div>
-          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
           <!-- homepage-0 -->
-          <ins class="adsbygoogle"
+          <!-- <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-4566416931763342"
                data-ad-slot="8120207605"
@@ -33,7 +33,7 @@
                data-full-width-responsive="true"></ins>
           <script>
                (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
+          </script> -->
         </div>
       </div>
       <h1 class="section--title"><%= link_to "Trending Articles", "/trending" %></h1>
@@ -48,17 +48,17 @@
     <div class="most_read contain_articles">
       <div class="ads_wrapper">
         <div>
-          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
           <!-- Homepage 1 -->
-          <ins class="adsbygoogle"
+          <!-- <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-4566416931763342"
                data-ad-slot="2546543885"
                data-ad-format="auto"
-               data-full-width-responsive="true"></ins>
-          <script>
+               data-full-width-responsive="true"></ins> -->
+          <!-- <script>
                (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
+          </script> -->
         </div>
       </div>
       <br>
