--- a/app/views/welcome/partials/_hero.html.erb
+++ b/app/views/welcome/partials/_hero.html.erb
@@ -23,9 +23,9 @@
   </div>
   <div class="ads_wrapper ads_responsive">
     <div>
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
       <!-- Homepage 1 -->
-      <ins class="adsbygoogle"
+      <!-- <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-4566416931763342"
            data-ad-slot="2546543885"
@@ -33,7 +33,7 @@
            data-full-width-responsive="true"></ins>
       <script>
            (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+      </script> -->
     </div>
   </div>
 </div>
