--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -1204,6 +1204,9 @@ p, ul, ol {
   body, #site-wrapper, #site-canvas, .bodywrapper {
     overflow-x: hidden !important;
   }
+  .flex_other_articles, .flex_other_articles h3 {
+    padding: 0 !important;
+  }
   .flex_wrapper_columns {
     flex-direction: column !important;
     .share_article_feedback {
