--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -497,6 +497,7 @@ $gray:  #2a2a2a;
 .trending_title {
   font-family: 'Playfair Display';
   font-size: 1.1em;
+  padding-top: 5px;
   a:hover {
     text-decoration: none;
   }
