--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -85,7 +85,7 @@ blockquote {
   <div class="post_apply mb-4">
     <div class="articles">
       <div class="flex_other_articles">
-        <h3>Trending in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
+        <h3>Recommended in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
         <%= render_async_cache get_trending_posts_in_category_path(id: @post.id) %>
       </div>
     </div>
