--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -87,6 +87,7 @@ blockquote {
       <div class="flex_other_articles">
         <h3>Recommended in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
         <%= render_async_cache get_trending_posts_in_category_path(id: @post.id) %>
+        <h6 style="margin-right: 20px; margin-top: -25px; margin-bottom: 10px; text-align: right;" class="trending_title"><i><%=link_to "See More", @post.category %></i></h6>
       </div>
     </div>
   </div>
