--- a/app/views/posts/partials/_trending.html.erb
+++ b/app/views/posts/partials/_trending.html.erb
@@ -7,4 +7,5 @@
       </div>
     </div>
   <% end %>
+  <h6 style="margin-right: 20px; margin-top: -25px; margin-bottom: 10px; text-align: right;" class="trending_title"><i><%=link_to "See More", @trending.first.category %></i></h6>
 </div>
