added css code and ad hints for mediavine

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,7 @@
     </div>
     <div class="most_read contain_articles">
       <div class="ads_wrapper">
-        <div>
+        <div class="content_hint"></div>
           <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
           <!-- homepage-0 -->
           <!-- <ins class="adsbygoogle"
@@ -34,7 +34,6 @@
           <script>
                (adsbygoogle = window.adsbygoogle || []).push({});
           </script> -->
-        </div>
       </div>
       <h1 class="section--title"><%= link_to "Trending Articles", "/trending" %></h1>
       <%= render_async_cache get_trending_posts_path, retry_count: 3 %>
@@ -47,7 +46,7 @@
     </div>
     <div class="most_read contain_articles">
       <div class="ads_wrapper">
-        <div>
+        <div class="content_hint"></div>
           <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
           <!-- Homepage 1 -->
           <!-- <ins class="adsbygoogle"
@@ -59,7 +58,6 @@
           <!-- <script>
                (adsbygoogle = window.adsbygoogle || []).push({});
           </script> -->
-        </div>
       </div>
       <br>
     </div>
