--- a/app/views/welcome/partials/_hero.html.erb
+++ b/app/views/welcome/partials/_hero.html.erb
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="ads_wrapper ads_responsive">
-    <div>
+    <div class="content_hint"></div>
       <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
       <!-- Homepage 1 -->
       <!-- <ins class="adsbygoogle"
@@ -34,6 +34,5 @@
       <script>
            (adsbygoogle = window.adsbygoogle || []).push({});
       </script> -->
-    </div>
   </div>
 </div>
