--- a/app/views/invitations/partials/home/_confirmation_invite_sent.html.erb
+++ b/app/views/invitations/partials/home/_confirmation_invite_sent.html.erb
@@ -1,6 +1,6 @@
 <div class="pr-4">
   <h3 class="text-center mt-4">Your invite is on its way!</h3>
-  <p class="text-center">You can check the progress of your invitation under the "Be Promoted" tab. Remember that your friend must submit an application for you to get a promotion point.</p>
+  <p class="text-center">You can check the progress of your invitation under the "Be Promoted" tab. Remember that your friend must be accepted for you to get a promotion point.</p>
   <div style="max-width: 500px; margin: 0 auto;">
     <?xml version="1.0" encoding="UTF-8"?>
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="auto" viewBox="0 0 375 225" version="1.2">
@@ -61,7 +61,7 @@
     </div>
   </li>
 
-  <div class="btn_cntnr mt-0 mb-0 pb-0 pt-3 pl-0" style="float: none; position: relative;">
+  <div class="btn_cntnr mt-0 mb-0 pb-4 pt-3 pl-0" style="float: none; position: relative;">
     <%= submit_tag "Send Another Invite", onclick: "newInvite()", class: "newpost--new--profile mr-0 pl-4 pr-4 mb-0 submit_modal", id: "submit-comment-modal-button" %>
   </div>
 </div>
