--- a/app/views/users/dashboard/tabs/articles/_preview_post.html.erb
+++ b/app/views/users/dashboard/tabs/articles/_preview_post.html.erb
@@ -9,11 +9,20 @@
         </button>
       </div>
       <div class="comment_form_wrapper">
-        <div class="alert alert-info vertical-align-container" role="alert">
-          <p class="m-0 pr-4">
-            You have <b><%= user.promotions %> promotion credit<% if !(user.promotions.eql? 1) %>s<% end %></b> available
-          </p>
-        </div>
+          <% if post.promoting_until.present? && post.promoting_until > Time.now %>
+            <div style="background-color: #FA8075" class="alert alert-info vertical-align-container" role="alert">
+              <p class="m-0 pr-4 white-text">
+                <svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire" class="mb-1 svg-inline--fa fa-fire fa-w-12" role="img" viewBox="0 0 384 512"><path fill="currentColor" d="M216 23.86c0-23.8-30.65-32.77-44.15-13.04C48 191.85 224 200 224 288c0 35.63-29.11 64.46-64.85 63.99-35.17-.45-63.15-29.77-63.15-64.94v-85.51c0-21.7-26.47-32.23-41.43-16.5C27.8 213.16 0 261.33 0 320c0 105.87 86.13 192 192 192s192-86.13 192-192c0-170.29-168-193-168-296.14z"></path></svg>
+                Promoting ends in <%= time_ago_in_words(post.promoting_until) unless post.promoting_until.blank? %>
+              </p>
+            </div>
+          <% else %>
+            <div class="alert alert-info vertical-align-container" role="alert">
+              <p class="m-0 pr-4">
+                You have <b><%= user.promotions %> promotion credit<% if !(user.promotions.eql? 1) %>s<% end %></b> available
+              </p>
+            </div>
+          <% end %>
         <div class="pitch_preview_wrapper pt-2">
           <div class="flex_child mr-3">
             <%= image_tag(post.thumbnail.url(:large2), class: "image_half_left mb-4") %>
@@ -23,26 +32,19 @@
             <p class="mt-0">
               <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" class="svg-inline--fa fa-eye fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path></svg> <%= post.post_impressions %> views
             </p>
-            <% if post.promoting_until.present? && post.promoting_until > Time.now %>
-              <div class="rounded-bottom lighten-3 text-right p-3" style="background-color: #FA8075">
-                <p class="list-inline-item pr-2 white-text"><svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire" class="mb-1 svg-inline--fa fa-fire fa-w-12" role="img" viewBox="0 0 384 512"><path fill="currentColor" d="M216 23.86c0-23.8-30.65-32.77-44.15-13.04C48 191.85 224 200 224 288c0 35.63-29.11 64.46-64.85 63.99-35.17-.45-63.15-29.77-63.15-64.94v-85.51c0-21.7-26.47-32.23-41.43-16.5C27.8 213.16 0 261.33 0 320c0 105.87 86.13 192 192 192s192-86.13 192-192c0-170.29-168-193-168-296.14z"></path></svg> Promoting ends in <%= time_ago_in_words(post.promoting_until) unless post.promoting_until.blank? %></p>
-              </div>
-            <% else %>
-              <div class="rounded-bottom lighten-3 text-right p-1">
-                <% @class = user.promotions < 1 ? "disabled" : "" %>
-                <%= form_for post do |f| %>
-                  <% @initial = (post.promoting_until.present? && post.promoting_until > Time.now) ? post.promoting_until : Time.now %>
-                  <%= f.hidden_field :promoting_until, value: @initial + 7.days %>
-                  <div class="btn_cntnr mb-0 pb-0">
-                    <span data-toggle="tooltip" title="<% if user.promotions < 1 %>Earn more credits<% end %>">
-                      <%= f.submit 'Promote (1 credit)',
-                        data: {confirm: "This article will be promoted across the entire website under More on The Teen Magazine for 1 week. You are using 1 credit out of your available #{user.promotions} credits to do this. Do you want to continue?"},
-                        class: "newpost--new--profile #{@class}" %>
-                    </span>
-                  </div>
-                <% end %>
-              </div>
-            <% end %>
+            <div class="rounded-bottom lighten-3 text-right">
+              <% @is_promoted = @post.promoting_until.present? && @post.promoting_until > Time.now %>
+              <% @class = @user.promotions < 1 ? "disabled" : "" %>
+              <% if @is_promoted %>
+                <div class="btn_cntnr mb-0 pb-0">
+                  <%= link_to "Extend (1 credit)", promote_post_path(:id => @user.id, :post_id => post.id), method: :patch, remote: true, data: {confirm: "This article is already being promoted and will be extended by 1 week. You are using 1 credit out of your available #{user.promotions} credits to do this. Do you want to continue?"}, class: "newpost--new--profile #{@class} mr-1" %>
+                </div>
+              <% else %>
+                <div class="btn_cntnr mb-0 pb-0">
+                  <%= link_to "Promote (1 credit)", promote_post_path(:id => @user.id, :post_id => post.id), method: :patch, remote: true, data: {confirm: "This article will be promoted across the entire website under More on The Teen Magazine for 1 week. You are using 1 credit out of your available #{user.promotions} credits to do this. Do you want to continue?"}, class: "newpost--new--profile #{@class} mr-1" %>
+                </div>
+              <% end %>
+            </div>
           </div>
         </div>
         <div class="btn_cntnr mb-0 pb-0">
